@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
- <javascript cacheable="False"
+ <javascript cacheable="True"
              compression="none"
-             cookable="False"
+             cookable="True"
              enabled="True"
              expression="not: portal/portal_membership/isAnonymousUser"
              id="tiny_mce.js"
              inline="False"/>
 
- <javascript cacheable="False"
+ <javascript cacheable="True"
              compression="none"
-             cookable="False"
+             cookable="True"
              enabled="True"
              expression="not: portal/portal_membership/isAnonymousUser"
              id="tiny_mce_init.js"
